<resources>
    <string name="app_name">Nachos</string>
    <string name="movie_id" />
    <string name="save" />
    <string name="hint_contact" />
    <string name="tile">Tile</string>
    <string name="release_date">Release Date</string>
    <string name="movie_title">Movie Title</string>
    <string name="search">Search</string>
    <string name="delete_movie">Delete movie</string>
    <string name="adult">Adult</string>
    <string name="original_language">Original language</string>
    <string name="popularity">Popularity</string>
    <string name="vote_average">Vote average</string>
</resources>
